{{$NEXT}}

1.302013_012 2016-01-28 20:38:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - $Level effects all contexts once Test::Builder is loaded
    - Requires Test2 0.000023

1.302013_011 2016-01-14 21:55:28-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Performance enhancements

1.302013_010 2016-01-12 05:57:43-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Changes needed for Test2 0.000018

1.302013_009 2016-01-11 16:35:57-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make skip work without a count w/ done_testing (#629)
    - Require newer Test2 that fixes $! squashing (#628)

1.302013_008 2016-01-10 13:21:02-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version requirement (to fix downstream)

1.302013_007 2016-01-07 19:30:04-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version requirement

1.302013_006 2016-01-06 11:21:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Update for Test2 0.000013
    - Delay loading Data::Dumper
    - Test2::API::test2_no_wait(1) when threads/forking are on
    - Fix Test::Tester to use context
    - More downstream dists for testing

1.302013_005 2015-12-29 13:01:32-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Updates for Test2 0.000012
    - Helper for Test::SharedFork

1.302013_004 2015-12-28 13:12:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix diag/note bugs from refactor

1.302013_003 2015-12-22 09:41:46-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix bug in details() structure for subtests when the parent is todo

1.302013_002 2015-12-21 13:21:51-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Updates for Test2 0.000010

1.302013_001 2015-12-21 10:07:42-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Switch to using Test2 under the hood
    - Use Dist::Zilla for releases
    - Reformat Changes file

1.302012_004 2015-Nov-16 07:45:11-08:00 PST
    * Fix #600 - done_testing($count)

1.302012_003 2015-Oct-27 00:02:44-08:00 PST